--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ cycler==0.11.0
 dropbox==11.36.0
 Flask==2.2.2
 Flask-WTF==1.0.1
-flatbuffers==2.0.7
+flatbuffers
 fonttools==4.38.0
 frozenlist==1.3.3
 gast==0.4.0
@@ -33,7 +33,7 @@ importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
-keras==2.7.0
+keras
 Keras-Preprocessing==1.1.2
 kiwisolver==1.4.4
 libclang==14.0.6
@@ -49,7 +49,7 @@ pandas==1.5.2
 Pillow==9.4.0
 pip==22.3.1
 ply==3.11
-protobuf==3.20.3
+protobuf
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
@@ -68,7 +68,7 @@ scipy==1.9.1
 setuptools==65.6.3
 six==1.16.0
 stone==3.3.1
-tensorboard==2.11.0
+tensorboard
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-estimator==2.7.0
