--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
 keras
-Keras-Preprocessing==1.1.2
+Keras-Preprocessing
 kiwisolver==1.4.4
 libclang==14.0.6
 Markdown==3.4.1
