--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,409 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-absl-py=1.3.0=pypi_0
-aiohttp=3.8.3=py39h02fc5c5_1
-aiosignal=1.3.1=pyhd8ed1ab_0
-astunparse=1.6.3=pyhd8ed1ab_0
-async-timeout=4.0.2=pyhd8ed1ab_0
-attrs=22.2.0=pyh71513ae_0
-blinker=1.5=pyhd8ed1ab_0
-brotlipy=0.7.0=py39h02fc5c5_1005
-bzip2=1.0.8=h3422bc3_4
-c-ares=1.18.1=h3422bc3_0
-ca-certificates=2022.12.7=h4653dfc_0
-cached-property=1.5.2=hd8ed1ab_1
-cached_property=1.5.2=pyha770c72_1
-cachetools=5.2.0=pypi_0
-certifi=2022.12.7=pypi_0
-cffi=1.15.1=py39h7e6b969_3
-charset-normalizer=2.1.1=pyhd8ed1ab_0
-click=8.1.3=unix_pyhd8ed1ab_2
-contourpy=1.0.6=pypi_0
-cryptography=39.0.0=py39haa0b8cc_0
-cycler=0.11.0=pypi_0
-dropbox=11.36.0=pypi_0
-flask=2.2.2=pypi_0
-flask-wtf=1.0.1=pypi_0
-flatbuffers=2.0.7=pypi_0
-fonttools=4.38.0=pypi_0
-frozenlist=1.3.3=py39h02fc5c5_0
-gast=0.4.0=pyh9f0ad1d_0
-google-auth=2.15.0=pypi_0
-google-auth-oauthlib=0.4.6=pyhd8ed1ab_0
-google-pasta=0.2.0=pyh8c360ce_0
-grpcio=1.51.1=pypi_0
-h5py=3.7.0=pypi_0
-hdf5=1.10.6=nompi_h0fc092c_1114
-idna=3.4=pyhd8ed1ab_0
-imbalanced-learn=0.10.1=pypi_0
-importlib-metadata=6.0.0=pyha770c72_0
-itsdangerous=2.1.2=pypi_0
-jinja2=3.1.2=pypi_0
-joblib=1.2.0=pyhd8ed1ab_0
-keras=2.7.0=pypi_0
-keras-preprocessing=1.1.2=pyhd8ed1ab_0
-kiwisolver=1.4.4=pypi_0
-krb5=1.20.1=h127bd45_0
-libabseil=20220623.0=cxx17_h28b99d4_6
-libblas=3.9.0=16_osxarm64_openblas
-libcblas=3.9.0=16_osxarm64_openblas
-libclang=14.0.6=pypi_0
-libcurl=7.87.0=hbe9bab4_0
-libcxx=14.0.6=h2692d47_0
-libedit=3.1.20191231=hc8eb9b7_2
-libev=4.33=h642e427_1
-libffi=3.4.2=h3422bc3_5
-libgfortran=5.0.0=11_3_0_hd922786_27
-libgfortran5=11.3.0=hdaf2cc0_27
-libgrpc=1.51.1=h503f348_0
-liblapack=3.9.0=16_osxarm64_openblas
-libllvm11=11.1.0=hfa12f05_5
-libnghttp2=1.51.0=hd184df1_0
-libopenblas=0.3.21=openmp_hc731615_3
-libprotobuf=3.21.12=hb5ab8b9_0
-libsqlite=3.40.0=h76d750c_0
-libssh2=1.10.0=hb80f160_3
-libzlib=1.2.13=h03a7124_4
-llvm-openmp=15.0.6=h7cfbb63_0
-markdown=3.4.1=pyhd8ed1ab_0
-markupsafe=2.1.1=py39h02fc5c5_2
-matplotlib=3.6.2=pypi_0
-multidict=6.0.4=py39h02fc5c5_0
-ncurses=6.3=h07bb92c_1
-numpy=1.24.1=pypi_0
-oauthlib=3.2.2=pyhd8ed1ab_0
-openssl=1.1.1s=h03a7124_1
-opt_einsum=3.3.0=pyhd8ed1ab_1
-packaging=22.0=pypi_0
-pandas=1.5.2=pypi_0
-pillow=9.4.0=pypi_0
-pip=22.3.1=pyhd8ed1ab_0
-ply=3.11=pypi_0
-protobuf=3.20.3=pypi_0
-pyasn1=0.4.8=py_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.21=pyhd8ed1ab_0
-pyjwt=2.6.0=pyhd8ed1ab_0
-pyopenssl=23.0.0=pyhd8ed1ab_0
-pyparsing=3.0.9=pypi_0
-pysocks=1.7.1=pyha2e5f31_6
-python=3.9.15=h2d96c93_0_cpython
-python-dateutil=2.8.2=pypi_0
-python_abi=3.9=3_cp39
-pytz=2022.7=pypi_0
-pyu2f=0.1.5=pyhd8ed1ab_0
-re2=2022.06.01=h9a09cb3_1
-readline=8.1.2=h46ed386_0
-requests=2.28.1=pyhd8ed1ab_1
-requests-oauthlib=1.3.1=pyhd8ed1ab_0
-rsa=4.9=pyhd8ed1ab_0
-scikit-learn=1.0.2=pypi_0
-scipy=1.9.1=py39h737da60_0
-setuptools=65.6.3=pypi_0
-six=1.16.0=pypi_0
-stone=3.3.1=pypi_0
-tensorboard=2.11.0=pypi_0
-tensorboard-data-server=0.6.1=py39haa0b8cc_4
-tensorboard-plugin-wit=1.8.1=pyhd8ed1ab_0
-tensorflow-deps=2.7.0=0
-tensorflow-estimator=2.7.0=pypi_0
-tensorflow-macos=2.7.0=pypi_0
-termcolor=2.2.0=pypi_0
-threadpoolctl=3.1.0=pyh8a188c0_0
-tk=8.6.12=he1e0b03_0
-typing-extensions=4.4.0=pypi_0
-tzdata=2022g=h191b570_0
-urllib3=1.26.13=pyhd8ed1ab_0
-werkzeug=2.2.2=pyhd8ed1ab_0
-wheel=0.38.4=pypi_0
-wrapt=1.14.1=pypi_0
-wtforms=3.0.1=pypi_0
-xz=5.2.6=h57fd34a_0
-yarl=1.8.2=py39h02fc5c5_0
-zipp=3.11.0=pyhd8ed1ab_0
-zlib=1.2.13=h03a7124_4
+뿯붿absl-py==1.4.0
+
+aiogram==2.22.1
+
+aiohttp==3.8.1
+
+aiosignal==1.2.0
+
+altair==4.2.2
+
+antlr4-python3-runtime==4.9.3
+
+anyio==3.6.2
+
+argon2-cffi==21.3.0
+
+argon2-cffi-bindings==21.2.0
+
+asgiref==3.6.0
+
+asttokens==2.2.1
+
+astunparse==1.6.3
+
+async-timeout==4.0.2
+
+attrs==22.1.0
+
+Babel==2.9.1
+
+backcall==0.2.0
+
+beautifulsoup4==4.12.0
+
+bleach==6.0.0
+
+blinker==1.5
+
+cachetools==5.3.0
+
+certifi==2022.12.7
+
+cffi==1.15.1
+
+chardet==4.0.0
+
+charset-normalizer==2.1.0
+
+click==8.1.3
+
+cmake==3.25.2
+
+colorama==0.4.5
+
+coloredlogs==15.0.1
+
+contourpy==1.0.7
+
+cycler==0.10.0
+
+debugpy==1.6.6
+
+decorator==4.4.2
+
+defusedxml==0.7.1
+
+distlib==0.3.6
+
+Django==4.1.7
+
+entrypoints==0.4
+
+executing==1.2.0
+
+face-recognition-models==0.3.0
+
+fastapi==0.95.0
+
+fastjsonschema==2.16.3
+
+filelock==3.9.0
+
+Flask==2.2.2
+
+Flask-WTF==1.1.1
+
+flatbuffers==23.1.21
+
+fonttools==4.38.0
+
+frozenlist==1.3.1
+
+gast==0.4.0
+
+gdown==4.7.1
+
+gevent==22.10.2
+
+gitdb==4.0.10
+
+GitPython==3.1.31
+
+google==3.0.0
+
+google-auth==2.16.1
+
+google-auth-oauthlib==0.4.6
+
+google-pasta==0.2.0
+
+greenlet==2.0.2
+
+grpcio==1.51.3
+
+h11==0.14.0
+
+h5py==3.8.0
+
+httplib2==0.21.0
+
+humanfriendly==10.0
+
+idna==2.10
+
+image==1.5.33
+
+importlib-metadata==6.1.0
+
+importlib-resources==5.12.0
+
+imutils==0.5.4
+
+ipykernel==5.5.6
+
+ipython==7.34.0
+
+ipython-genutils==0.2.0
+
+itsdangerous==2.1.2
+
+jedi==0.18.2
+
+Jinja2==3.1.2
+
+joblib==1.2.0
+
+jsonschema==4.17.3
+
+jupyter-client==6.1.12
+
+jupyter_core==5.3.0
+
+jupyterlab-pygments==0.2.2
+
+keras==2.11.0
+
+kiwisolver==1.4.4
+
+libclang==15.0.6.1
+
+Markdown==3.4.1
+
+markdown-it-py==2.2.0
+
+MarkupSafe==2.1.1
+
+matplotlib==3.7.1
+
+matplotlib-inline==0.1.6
+
+mdurl==0.1.2
+
+minecraft==0.1.2
+
+mistune==2.0.5
+
+mpmath==1.2.1
+
+multidict==6.0.2
+
+nbclient==0.7.2
+
+nbconvert==7.2.10
+
+nbformat==5.8.0
+
+notebook==6.3.0
+
+numpy==1.24.1
+
+oauthlib==3.2.2
+
+omegaconf==2.3.0
+
+onnxruntime==1.14.1
+
+openai==0.27.2
+
+opencv-python==4.6.0.66
+
+opt-einsum==3.3.0
+
+packaging==23.0
+
+pandas==1.5.3
+
+pandocfilters==1.5.0
+
+parso==0.8.3
+
+pexpect==4.8.0
+
+pickleshare==0.7.5
+
+Pillow==9.4.0
+
+platformdirs==3.2.0
+
+playsound==1.3.0
+
+prometheus-client==0.16.0
+
+prompt-toolkit==3.0.38
+
+protobuf==3.19.6
+
+psutil==5.9.4
+
+psycopg2==2.9.3
+
+ptyprocess==0.7.0
+
+pure-eval==0.2.2
+
+pyarrow==11.0.0
+
+pyasn1==0.4.8
+
+pyasn1-modules==0.2.8
+
+pycparser==2.21
+
+pydantic==1.10.7
+
+pydeck==0.8.0
+
+pydevd==2.9.5
+
+Pygments==2.14.0
+
+Pympler==1.0.1
+
+pyparsing==2.4.7
+
+pyreadline3==3.4.1
+
+pyrsistent==0.19.3
+
+PySocks==1.7.1
+
+pyTelegramBotAPI==4.9.0
+
+python-dateutil==2.8.2
+
+python-dotenv==1.0.0
+
+python-multipart==0.0.6
+
+pytz==2022.2.1
+
+pytz-deprecation-shim==0.1.0.post0
+
+pywin32==306
+
+pywinpty==2.0.10
+
+PyYAML==6.0
+
+pyzmq==25.0.2
+
+requests==2.28.2
+
+requests-oauthlib==1.3.1
+
+requests-toolbelt==0.10.1
+
+resnet-pytorch==0.2.0
+
+rich==13.3.3
+
+roboflow==1.0.1
+
+rsa==4.9
+
+scikit-learn==1.2.2
+
+scipy==1.10.1
+
+seaborn==0.12.2
+
+semver==2.13.0
+
+Send2Trash==1.8.0
+
+silero==0.4.1
+
+six==1.16.0
+
+smmap==5.0.0
+
+sniffio==1.3.0
+
+sounddevice==0.4.5
+
+soupsieve==2.4
+
+speake3==0.3
+
+sqlparse==0.4.3
+
+stack-data==0.6.2
+
+starlette==0.26.1
+
+streamlit==1.20.0
+
+sympy==1.11.1
+
+tensorboard==2.11.2
+
+tensorboard-data-server==0.6.1
+
+tensorboard-plugin-wit==1.8.1
+
+tensorflow==2.11.0
+
+tensorflow-estimator==2.11.0
+
+tensorflow-hub==0.13.0
+
+tensorflow-intel==2.11.0
+
+tensorflow-io-gcs-filesystem==0.31.0
+
+termcolor==2.2.0
+
+terminado==0.17.1
+
+thop==0.1.1.post2209072238
+
+threadpoolctl==3.1.0
+
+tinycss2==1.2.1
+
+toml==0.10.2
+
+toolz==0.12.0
+
+torch==1.13.1
+
+torchaudio==0.13.1
+
+torchsummary==1.5.1
+
+torchvision==0.14.1
+
+tornado==6.2
+
+tqdm==4.64.1
+
+traitlets==5.7.1
+
+typing_extensions==4.4.0
+
+tzdata==2023.2
+
+tzlocal==4.3
+
+urllib3==1.26.14
+
+uvicorn==0.21.1
+
+validators==0.20.0
+
+virtualenv==20.19.0
+
+waitress==2.1.2
+
+watchdog==3.0.0
+
+wcwidth==0.2.6
+
+webencodings==0.5.1
+
+Werkzeug==2.2.2
+
+wget==3.2
+
+wrapt==1.15.0
+
+WTForms==3.0.1
+
+yarl==1.8.1
+
+zipp==3.15.0
+
+zope.event==4.6
+
+zope.interface==6.0
