--- a/requirements.txt
+++ b/requirements.txt
@@ -63,7 +63,7 @@ tensorboard-data-server==0.7.0
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.12.0
 tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
+tensorflow-intel
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 threadpoolctl==3.1.0
@@ -76,3 +76,4 @@ wrapt==1.14.1
 WTForms==3.0.1
 yarl==1.9.2
 zipp==3.15.0
+waitress
